# csurename

./: .gitattributes  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: checknames.rs  common.rs  failed_commits.json  integration_tests.rs  regex_tests.rs
tests/testdata/: csurename.toml
