[package]
name = "csurename"
version = "1.3.0"
authors = ["Stefano Volpe, <stefano.volpe2@studio.unibo.it>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "csurename is a small command line utility which makes sure your filenames adhere to @csunibo's naming standards."
readme = "README.md"
repository = "https://github.com/csunibo/csurename"
keywords = ["utility", "rename"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ignore = "0.4.18"
clap = { version = "4.2.7", features = [ "cargo" ] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
serde_json="1.0.96"
regex="1.8.1"